--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -11,11 +11,10 @@ rules:
         - 2
         - size: 4
     clean-import-paths:
-        - false
-        - leading-underscore: true
+        - 0
     class-name-format:
         - false
-        - convention: strictbem
+        - convention: '^[a-z]([a-z0-9]){1,3}-[a-z][a-zA-Z0-9]+(_[a-z][a-zA-Z0-9]+)?(-([a-z0-9-]+)?[a-z0-9])?$'
     variable-name-format:
         - allow-leading-underscore: false
         - convention: camelcase
